Initial Checking after port

--- a/src/FSMSharp/FSMSharp_Tests/FSMSharp_Tests.csproj
+++ b/src/FSMSharp/FSMSharp_Tests/FSMSharp_Tests.csproj
@@ -8,7 +8,7 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>FSMSharp_Tests</RootNamespace>
     <AssemblyName>FSMSharp_Tests</AssemblyName>
-    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.6.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{3AC096D0-A1C2-E12C-1390-A8335801FDAB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
@@ -16,6 +16,7 @@
     <ReferencePath>$(ProgramFiles)\Common Files\microsoft shared\VSTT\$(VisualStudioVersion)\UITestExtensionPackages</ReferencePath>
     <IsCodedUITest>False</IsCodedUITest>
     <TestProjectType>UnitTest</TestProjectType>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -58,7 +59,7 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\FSMSharp\FSMSharp.csproj">
-      <Project>{b6896c0b-808f-4fd6-971b-eb23e3061097}</Project>
+      <Project>{cc3ff64a-9b58-486e-a5d9-70d8a0179b44}</Project>
       <Name>FSMSharp</Name>
     </ProjectReference>
   </ItemGroup>
