Removed  old projects Updated Unit Tests to .Net Standard 2.0

--- a/src/FSMExamples/FSMExamples.csproj
+++ b/src/FSMExamples/FSMExamples.csproj
@@ -47,6 +47,12 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\FSMSharp\FSMSharp.csproj">
+      <Project>{cc3ff64a-9b58-486e-a5d9-70d8a0179b44}</Project>
+      <Name>FSMSharp</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
