--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -8,7 +8,7 @@ on:
       - '.github/workflows/**'   
 jobs:
   deploy:
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
     permissions:
       packages: write
       contents: read
@@ -26,14 +26,17 @@ jobs:
           source-url: https://nuget.pkg.github.com/Digitalroot-Valheim/index.json
       - name: Check out repository code
         uses: actions/checkout@v2
-      - name: List files in the repository
-        run: |
-          ls ${{ github.workspace }}
+      - name: Setup NuGet.exe
+        uses: nuget/setup-nuget@v1
+        with:
+          nuget-version: latest
+      - name: Add msbuild to PATH
+        uses: microsoft/setup-msbuild@v1.0.2
       - name: Restore packages
-        run: dotnet restore src/${{ env.SLN_FILE_NAME }} --nologo
-      - name: Build    
+        run: nuget restore src/${{ env.SLN_FILE_NAME }} --nologo
+      - name: Build
         run: dotnet build src/${{ env.SLN_FILE_NAME }} -c Release --no-restore --nologo
-      - name: Test  
+      - name: Test
         run: dotnet test src/${{ env.SLN_FILE_NAME }} -c Release --no-build --nologo
       - name: Create the package
         run: dotnet pack src/${{ env.PROJ }}/${{ env.PROJ }}.csproj -c Release --no-restore --no-build --nologo
