--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -40,5 +40,9 @@ jobs:
         run: dotnet test src/${{ env.SLN_FILE_NAME }} -c Release --no-build --nologo
       - name: Create the package
         run: dotnet pack src/${{ env.PROJ }}/${{ env.PROJ }}.csproj -c Release --no-restore --no-build --nologo
+      - name: List files in the repository
+        run: |
+          ls src/${{ env.PROJ }}/bin/Release/
       - name: Publish package to Digitalroot-Valheim nuget repository
-        run: dotnet nuget push src/${{ env.PROJ }}/bin/Release/*.nupkg --skip-duplicate
+        run: dotnet nuget push src/${{ env.PROJ }}/bin/Release/*.nupkg --skip-duplicate --no-symbols true
+
